# handmade

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.bat  compile_commands.json  handmade
code/: build.bat  win32_handmade.cpp
misc/: subst.reg
src/: handmade.cpp  handmade.h  sdl_handmade.cpp  sdl_handmade.cpp.old  sdl_handmade.h  win32_handmade.cpp
